; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/allwinner/clkng/extr_aw_clk_nmm.c_aw_clk_nmm_recalc.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/allwinner/clkng/extr_aw_clk_nmm.c_aw_clk_nmm_recalc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clknode = type { i32 }
%struct.aw_clk_nmm_sc = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.clknode*, i32*)* @aw_clk_nmm_recalc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @aw_clk_nmm_recalc(%struct.clknode* %0, i32* %1) #0 {
  %3 = alloca %struct.clknode*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.aw_clk_nmm_sc*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.clknode* %0, %struct.clknode** %3, align 8
  store i32* %1, i32** %4, align 8
  %10 = load %struct.clknode*, %struct.clknode** %3, align 8
  %11 = call %struct.aw_clk_nmm_sc* @clknode_get_softc(%struct.clknode* %10)
  store %struct.aw_clk_nmm_sc* %11, %struct.aw_clk_nmm_sc** %5, align 8
  %12 = load %struct.clknode*, %struct.clknode** %3, align 8
  %13 = call i32 @DEVICE_LOCK(%struct.clknode* %12)
  %14 = load %struct.clknode*, %struct.clknode** %3, align 8
  %15 = load %struct.aw_clk_nmm_sc*, %struct.aw_clk_nmm_sc** %5, align 8
  %16 = getelementptr inbounds %struct.aw_clk_nmm_sc, %struct.aw_clk_nmm_sc* %15, i32 0, i32 3
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @READ4(%struct.clknode* %14, i32 %17, i32* %6)
  %19 = load %struct.clknode*, %struct.clknode** %3, align 8
  %20 = call i32 @DEVICE_UNLOCK(%struct.clknode* %19)
  %21 = load i32, i32* %6, align 4
  %22 = load %struct.aw_clk_nmm_sc*, %struct.aw_clk_nmm_sc** %5, align 8
  %23 = getelementptr inbounds %struct.aw_clk_nmm_sc, %struct.aw_clk_nmm_sc* %22, i32 0, i32 2
  %24 = call i32 @aw_clk_get_factor(i32 %21, i32* %23)
  store i32 %24, i32* %7, align 4
  %25 = load i32, i32* %6, align 4
  %26 = load %struct.aw_clk_nmm_sc*, %struct.aw_clk_nmm_sc** %5, align 8
  %27 = getelementptr inbounds %struct.aw_clk_nmm_sc, %struct.aw_clk_nmm_sc* %26, i32 0, i32 1
  %28 = call i32 @aw_clk_get_factor(i32 %25, i32* %27)
  store i32 %28, i32* %8, align 4
  %29 = load i32, i32* %6, align 4
  %30 = load %struct.aw_clk_nmm_sc*, %struct.aw_clk_nmm_sc** %5, align 8
  %31 = getelementptr inbounds %struct.aw_clk_nmm_sc, %struct.aw_clk_nmm_sc* %30, i32 0, i32 0
  %32 = call i32 @aw_clk_get_factor(i32 %29, i32* %31)
  store i32 %32, i32* %9, align 4
  %33 = load i32*, i32** %4, align 8
  %34 = load i32, i32* %33, align 4
  %35 = load i32, i32* %7, align 4
  %36 = mul nsw i32 %34, %35
  %37 = load i32, i32* %8, align 4
  %38 = sdiv i32 %36, %37
  %39 = load i32, i32* %9, align 4
  %40 = sdiv i32 %38, %39
  %41 = load i32*, i32** %4, align 8
  store i32 %40, i32* %41, align 4
  ret i32 0
}

declare dso_local %struct.aw_clk_nmm_sc* @clknode_get_softc(%struct.clknode*) #1

declare dso_local i32 @DEVICE_LOCK(%struct.clknode*) #1

declare dso_local i32 @READ4(%struct.clknode*, i32, i32*) #1

declare dso_local i32 @DEVICE_UNLOCK(%struct.clknode*) #1

declare dso_local i32 @aw_clk_get_factor(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
